tests/hevm/fail/aliasing/aliasing.act
contract A

constructor (uint z)

iff
    CALLVALUE == 0

creates
    uint x := z


transition x() : uint

iff
    CALLVALUE == 0

storage
returns x

transition set_x(uint z)
iff
    CALLVALUE == 0

storage
    x := z


contract B
constructor (address<A> x)
iff
    CALLVALUE == 0

creates
    A a := x


transition upd()
iff
    CALLVALUE == 0

storage
    a.x := 42


contract C
constructor (address<A> x)

iff
    CALLVALUE == 0

creates
    A a := new A(42)
    B b1 := new B(x)
    B b2 := new B(x)
